--- a/web_static/product-form.html
+++ b/web_static/product-form.html
@@ -29,8 +29,8 @@
               <input type="text" id="name" name="name" required>
             </div>
             <div class="form-group">
-              <label for="description">Description</label>
-              <textarea id="description" name="description" rows="4" required></textarea>
+              <label for="location">Location</label>
+              <input type="text" id="location" name="location" required>
             </div>
             <div class="form-group">
               <label for="quantity">Quantity</label>
@@ -41,8 +41,8 @@
               <input type="text" id="price" name="price" required>
             </div>
             <div class="form-group">
-              <label for="location">Location</label>
-              <input type="text" id="location" name="location" required>
+              <label for="description">Description</label>
+              <textarea id="description" name="description" rows="4" required></textarea>
             </div>
             <div class="form-group">
               <label for="availability">Availability Status</label>
@@ -52,9 +52,11 @@
                 <option value="out_of_stock">Out of Stock</option>
               </select>
             </div>
-            <div class="form-group">
-              <label for="image">Image</label>
-              <input type="file" id="image" name="image" accept="image/*" required>
+            <div class="product-image">
+              <label for="product-pic-input">
+                <img id="product-pic-preview" src="default-product-pic.png" alt="Add Product Picture">
+                <input type="file" id="product-pic-input" accept="image/*">
+              </label>
             </div>
             <div class="form-group">
               <button type="submit">Submit</button>
@@ -64,5 +66,6 @@
     </div>
   </div>
   <script src="product-form.js"></script>
+  <script src=""></script>
 </body>
 </html>
